--- a/custom.css
+++ b/custom.css
@@ -12,9 +12,11 @@
   --main-bg-color: #f1f1f1; 
   --main-blue-color: #0b96cd;
   --main-blue-clear-color: #0bcdc7;
-  --main-item-bg-color: #fff;
-  --main-text-color: #000;
+  --main-item-bg-color: white;
+  --main-text-color: black;
   --secondary-text-color: gray;
+  --main-text-color-black: black;
+  --main-text-color-white: white;
 }
 
 
@@ -73,26 +75,31 @@ body {
   color: #1a1a1a;
 }
 
-/*/////////////////////////////////  navbar section   //////////////////////////////*/
+/*/////////////////////////////////  header section   //////////////////////////////*/
 /* Header */
 /*Hide Standart header logo*/
+.navbar a.brand,
 .navbar .brand img,
 .navbar .brand h1,
 .navbar .brand h2,
 .navbar .brand hidden-phone {
   display: none;
 }
-/*make container navbar to good height and good bg color*/
 
-.navbar .container-logo {
-  width: auto;  
+/* 1 header container*/
+div.navbar{
+  height: auto;
+  position: static;
+}
+
+/* 1.1 * logo container * */
+div.navbar header.logo{
+  /*physic propriety*/
   height: 40px;
+  margin:0;
   padding: 0 10%;
-  
- display: flex; /* contexte sur le parent */
-  flex-direction: row; /* direction d'affichage verticale */
-  justify-content: space-between; /* alignement vertical */
-  
+
+  /*design propriety*/
   background: var(--main-blue-clear-color);
   background: -moz-linear-gradient(left, var(--main-blue-clear-color) 0%, var(--main-blue-color) 100%);
   background: -webkit-gradient(left top, right top, color-stop(0%, var(--main-blue-clear-color)), color-stop(100%, var(--main-blue-color)));
@@ -102,20 +109,27 @@ body {
   background: linear-gradient(to right, var(--main-blue-clear-color) 0%, var(--main-blue-color) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="var(--main-blue-clear-color)", endColorstr="var(--main-blue-color)", GradientType=1 );
 }
-
-/*make navbar icon*/
-.navbar .container-logo img.header__icon {
-  width: 150px;
-  height: auto;
-  margin:auto 0;
+/* ** 1.1.1 container form ** */
+div.navbar header.logo div.container-logo{
+  /*physic propriety*/
+  height: 100%;
+  margin:0;
+  padding: 0;
+  /*display propriety*/
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
 }
 
- /*make navbar input for search*/
-.navbar #searchInput {
-  height: auto;
-  margin: auto 0;
-  padding: 5px 20px;
+
+/* *** 1.1.1.2 Search *** */
+div.navbar header.logo div.container-logo input#searchInput {
+  /*physic propriety*/
+  width: 120px;
+  height: 20px;
+  padding: 5px 25px 5px 25px;
   
+  /*design propriety*/
   color: white;
   font-size: 12px;
   border: none;
@@ -124,65 +138,161 @@ body {
   
   background-color: transparent;
   background-image: url('../images/searchicon.png');
-  background-position: 7px 6px;
+  background-position: 5px 9px;
   background-repeat: no-repeat;
   
 }
-.navbar #searchInput::placeholder {
-  color: white;
+div.navbar header.logo div.container-logo input#searchInput::placeholder {
   opacity: 0.5;
   text-align: center;
 }
 
-
-/*///////////////////////////////// nav bar //////////////////////////////*/
-
-
-.navbar a.brand{
-  display:none;
-}
-
-
-.navbar .navbar-inner {
-  background: white;
-  width: 100%;
-  border: none;
-  margin: 0;
-}
-
-.navbar-inner .container {
-  width: 100%;
-  margin: 0;
+/* 1.2 ***************navbar container*******************/
+div.navbar div.navbar-inner{
+  /*physic propriety*/
+  height:50px;
+  margin:0;
   padding: 0 10%;
+
+  /*design propriety*/
+  background: var(--main-item-bg-color);
+  border: none;
 }
 
-.navbar-inner #appnavbar {
-  float:left;
+/* ** 1.2.1 container form ** */
+div.navbar div.navbar-inner .container{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+div.navbar div.navbar-inner .container #appnavbar {
+  width: 100%;
+  height: 100%;
+  float: none;
   display:flex;
-  justify-content:space-between;
-  width:auto;
+  justify-content:flex-start;
+  align-items:flex-end;
   margin: 0;
 }
 
-.nav li a img {
+
+div.navbar div.navbar-inner .container #appnavbar li a img {
   display: none;
 }
 
-.navbar-inner #appnavbar > li a {
-  margin-right:30px;
-  background:transparent;
-  color: #1a1a1a;
+div.navbar div.navbar-inner .container #appnavbar > li a {
+  height: 100%;
+  
+  color: var(--main-text-color);
   text-shadow:none;
+  
+  background:transparent;
   border:none;
   border-radius:0;
   border-bottom: 2px solid var(--main-blue-color);
-  flex-basis:auto;
 }
 
-.navbar-inner #appnavbar > li a:hover {
+div.navbar div.navbar-inner .container #appnavbar > li a:hover {
   background:var(--main-blue-color);
-  color: #fff;
+  color: var(--main-text-color-white);
+  text-shadow:none;
 }
+
+div.navbar .menu-toggle{
+  display: none;
+}
+
+/*///////////////////////////////// holder  //////////////////////////////*/
+.container-fluid{
+  padding: 0;
+}
+
+div#holder{
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding: 0 20px;
+}
+
+div#holder .bannercontent{
+  margin: 0;
+  padding: 0;
+}
+
+div#holder .bannercontent tr > #timesun{
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+}
+
+
+
+
+
+/*///////////////////////////////// row and tile //////////////////////////////*/
+div.row{
+    padding:0;  
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 !important;
+}
+
+.span4 {
+  margin:0;
+  width: auto;
+  height: auto;
+  padding: 0;
+}
+
+div.item {
+  position: relative;
+  width: 20em;
+  height: 10em;
+  margin:20px 20px;
+  flex-grow: 1;
+  
+  background: var(--main-item-bg-color);
+  padding: 20px;
+  border-radius: 6px;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+
+}
+
+div.item:hover {
+	box-shadow: 0px 0px 0px 2px rgb(11, 150, 205);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -439,13 +549,3 @@ body table#itemtable tr > .options {
 }
 /*/////////////////////////////////  media phone   //////////////////////////////*/
 
-
-
-
-
-
-
-.bannercontent {
-  display: block;
-  /*padding: 90px 5em 0 5em !important;*/
-}
