--- a/custom.css
+++ b/custom.css
@@ -232,7 +232,7 @@ div#holder .bannercontent tr > #timesun{
 
 
 /*///////////////////////////////// row and tile //////////////////////////////*/
-div.row{
+div.row.divider{
     padding:0;  
     display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
     display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
@@ -243,20 +243,13 @@ div.row{
     justify-content: center;
     margin: 0 !important;
 }
-
-.span4 {
-  margin:0;
-  width: auto;
-  height: auto;
-  padding: 0;
-}
-
-div.item {
+/*$("#main-view div.row.divider .span4").toggleClass('span4 tile');*/
+div.row.divider .tile{
   position: relative;
-  width: 20em;
-  height: 10em;
-  margin:20px 20px;
+  flex-basis: 15em;
+  height: 7em;
   flex-grow: 1;
+  margin:20px 20px;
   
   background: var(--main-item-bg-color);
   padding: 20px;
@@ -264,13 +257,17 @@ div.item {
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
 
 }
-
-div.item:hover {
+div.row .tile:hover {
 	box-shadow: 0px 0px 0px 2px rgb(11, 150, 205);
 }
 
 
-
+div.row .tile table td#name{position: absolute;top:10%;left:10%;}
+div.row .tile table td#bigtext{position: absolute;top:10%;right:10%;}
+div.row .tile table td#type{}
+div.row .tile table td[id^="img"]{position: absolute;bottom:10%;left:10%;}
+div.row .tile table td#status{}
+div.row .tile table td#lastupdate{position:absolute;bottom:10%;right:10%;}
 
 
 
